--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18",
     "react-icons": "^5.3.0",
     "react-select": "^5.8.0",
+    "react-top-loading-bar": "^2.3.1",
     "uuid": "^10.0.0"
   },
   "devDependencies": {
