--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
+    "react-minimal-modal": "^2.1.0",
     "react-select": "^5.8.0",
     "react-top-loading-bar": "^2.3.1",
     "swiper": "^11.1.14",
