toast and some update

--- a/.env.development
+++ b/.env.development
@@ -1,1 +1,3 @@
+NEXT_PUBLIC_BASEURL = https://testorgapi.timex.mn/api/v1
+NEXT_PUBLIC_IMGURL = https://testapi.timex.mn
 NEXT_PUBLIC_CONTACT_PHONE = 8678 1217
