--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-icons": "^5.3.0",
     "react-minimal-modal": "^2.1.0",
     "react-select": "^5.8.0",
+    "react-toastify": "^10.0.5",
     "react-top-loading-bar": "^2.3.1",
     "swiper": "^11.1.14",
     "uuid": "^10.0.0"
