--- a/package.json
+++ b/package.json
@@ -9,18 +9,21 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@hookform/resolvers": "^3.9.0",
     "axios": "^1.7.7",
     "moment": "^2.30.1",
     "next": "14.2.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-minimal-modal": "^2.1.0",
     "react-select": "^5.8.0",
     "react-toastify": "^10.0.5",
     "react-top-loading-bar": "^2.3.1",
     "swiper": "^11.1.14",
-    "uuid": "^10.0.0"
+    "uuid": "^10.0.0",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "eslint": "^8",
