--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
+    "@tanstack/react-table": "^8.20.5",
     "axios": "^1.7.7",
     "chart.js": "^4.4.4",
     "moment": "^2.30.1",
