--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "chart.js": "^4.4.4",
     "moment": "^2.30.1",
     "next": "14.2.13",
+    "rc-tooltip": "^6.2.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.3.1",
