--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-minimal-modal": "^2.1.0",
+    "react-multi-date-picker": "^4.5.2",
     "react-responsive-pagination": "^2.8.0",
     "react-select": "^5.8.0",
     "react-switch": "^7.0.0",
